<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:foreground="?attr/selectableItemBackground"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/light_shadow">

            <TextView
                android:id="@+id/date_of_demand"
                style="@style/TextLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_small"
                android:layout_marginLeft="@dimen/margin_high"
                android:layout_marginTop="@dimen/margin_small"
                android:textColor="@color/shadow"
                tools:text="09.09.2017"/>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/img_photo"
                android:layout_width="@dimen/image_width"
                android:layout_height="@dimen/image_height"
                android:layout_margin="@dimen/margin_medium"
                android:src="@drawable/ic_fin"/>

            <TextView
                android:id="@+id/title_of_demand"
                style="@style/TextMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginBottom="@dimen/margin_medium"
                android:layout_marginTop="@dimen/margin_medium"
                android:layout_toRightOf="@+id/img_photo"
                android:textStyle="bold"
                tools:text="Sekane travy"/>

            <LinearLayout
                android:id="@+id/view_oval"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/title_of_demand"
                android:layout_marginRight="@dimen/margin_little"
                android:layout_toRightOf="@+id/img_photo"
                android:orientation="vertical">

                <View
                    android:layout_width="@dimen/oval_width"
                    android:layout_height="@dimen/oval_height"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/oval_margin_bottom"
                    android:layout_marginTop="@dimen/margin_little"
                    android:background="@drawable/oval"
                    />

                <View
                    android:layout_width="@dimen/oval_small_width"
                    android:layout_height="@dimen/oval_small_height"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/oval_margin_bottom"
                    android:background="@drawable/oval"
                    />

                <View
                    android:layout_width="@dimen/oval_small_width"
                    android:layout_height="@dimen/oval_small_height"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/oval_margin_bottom"
                    android:background="@drawable/oval"
                    />

                <View
                    android:layout_width="@dimen/oval_small_width"
                    android:layout_height="@dimen/oval_small_height"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/oval_margin_bottom"
                    android:background="@drawable/oval"
                    />

                <View
                    android:layout_width="@dimen/oval_width"
                    android:layout_height="@dimen/oval_height"
                    android:layout_gravity="center"
                    android:background="@drawable/oval"
                    />
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/view_block_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/title_of_demand"
                android:layout_toRightOf="@+id/view_oval">

                <TextView
                    android:id="@+id/city_of_demand"
                    style="@style/TextSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginBottom="@dimen/margin_small"

                    tools:text="Praha 8"/>

                <TextView
                    android:id="@+id/postcode_of_demand"
                    style="@style/TextSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_small"
                    android:layout_toRightOf="@+id/city_of_demand"
                    tools:text=" 180 00"/>

                <TextView
                    android:id="@+id/code_of_the_country"
                    style="@style/TextSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_small"
                    android:layout_toRightOf="@+id/postcode_of_demand"
                    tools:text=" CZ"/>
            </RelativeLayout>

            <TextView
                android:id="@+id/date_from"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/view_block_address"
                android:layout_toRightOf="@+id/view_oval"
                tools:text="25.08.2017"/>

            <TextView
                android:id="@+id/dash"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/view_block_address"
                android:layout_toRightOf="@+id/date_from"
                android:text="@string/dash"/>

            <TextView
                android:id="@+id/date_to"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/view_block_address"
                android:layout_toRightOf="@+id/dash"
                tools:text="25.08.2017"/>

            <ImageView
                android:id="@+id/handshake"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/date_from"
                android:layout_marginLeft="@dimen/margin_medium"
                android:src="@drawable/handshake"/>

            <LinearLayout
                android:id="@+id/container_for_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/date_from"
                android:background="@color/light_shadow"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/price_of_demand"
                    style="@style/TextLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_small"
                    android:layout_marginRight="@dimen/margin_little"
                    android:gravity="center"
                    android:textColor="@color/wight"
                    tools:text="863"/>

                <TextView
                    style="@style/TextLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/margin_small"
                    android:text="@string/czech_crown"
                    android:textColor="@color/wight"
                    />
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/view_block"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/handshake"
                android:layout_marginBottom="@dimen/margin_medium"
                android:layout_toRightOf="@+id/img_photo">

                <TextView
                    android:id="@+id/quantity_of_demands"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="2"/>

                <TextView
                    android:id="@+id/offer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_little"
                    android:layout_marginRight="@dimen/margin_medium"
                    android:layout_toRightOf="@+id/quantity_of_demands"
                    android:text="@string/offer"
                    android:visibility="gone"/>

                <TextView
                    android:id="@+id/offers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_little"
                    android:layout_marginRight="@dimen/margin_medium"
                    android:layout_toRightOf="@+id/quantity_of_demands"
                    android:text="@string/offers"
                    android:visibility="gone"/>
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/view_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/handshake"
                android:layout_marginBottom="@dimen/margin_medium"
                android:layout_toRightOf="@+id/view_block"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/remain"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/remain"/>

                <TextView
                    android:id="@+id/day_of_end"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_little"
                    tools:text="2"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_little"
                    android:text="@string/days"/>

                <TextView
                    android:id="@+id/hours_of_end"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_little"
                    tools:text="7"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_little"
                    android:text="hours"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/view_is_empty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/handshake"
                android:layout_marginBottom="@dimen/margin_medium"
                android:layout_toRightOf="@+id/view_block">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time_is_end"/>
            </LinearLayout>

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/shadow"
            />
    </LinearLayout>
</LinearLayout>